finish the website, 1st version

--- a/about.html
+++ b/about.html
@@ -208,10 +208,56 @@ $(document).ready(function () {
 </div>
 
 
-<div id="about-this-site" class="section level3">
-<h3>About this site</h3>
-<p>Sometimes you need to say a bit about the site – how it was made, where it’s hosted, where the source code can be found.</p>
-<p>If this is for a project or analysis, I recommend giving some details about the R package versions that you used to create the content.</p>
+<div id="about-he-jin" class="section level1">
+<h1>About He Jin</h1>
+<div id="education-background" class="section level3">
+<h3>Education background</h3>
+<p><strong>Master of Science, Columbia University, Mailman School of Public Health, New York</strong><br />
+Major: Biostatisitcs (Theory &amp; Methods track)<br />
+<strong>Bachelor of Science, Shanghai Jiao Tong University (SJTU), Shanghai, China</strong><br />
+Major: Pharmacy, Minor: Musicology; GPA: 3.52/4.0</p>
+</div>
+<div id="research-experience" class="section level3">
+<h3>Research Experience</h3>
+<p><strong>Risk assessment of cancer based on the phosphorylation of specific protein</strong><br />
+Dept. of Bioinformatics &amp; Biostatistics, School of Life Science &amp; Biotechnology, SJTU, China<br />
+* Strategized on best usage of distance correlation model; Assessed model fit for research question<br />
+* Extracted phosphorylated protein and cancer data from different databases<br />
+* Applied distance correlation model to the data in R and cooperatively analyzed descriptive results</p>
+<p><strong>R package for detecting differential modules from High-throughput expression profiles</strong><br />
+Dept. of Bioinformatics &amp; Biostatistics, School of Life Science &amp; Biotechnology, SJTU, China<br />
+* Trained in advanced use of R to implement biological network module-based model<br />
+* Formulated an R package to effectively combine models from different biological pathways</p>
+<p><strong>LAMP-SERS on microfluidic chips (Team leader)</strong><br />
+Microfluidics Laboratory, University of Illinois at Chicago, United States<br />
+* Designed investigational project based on knowledge of microfluidics, loop-mediated isothermal amplification(LAMP), gold-nanoprobe, and surface-enhanced Raman spectroscopy (SERS)<br />
+* Prepared gold-nanoprobe and LAMP experiments in collaboration with research team<br />
+* Analyzed experiment data obtained from SERS</p>
+<p><strong>Meta-analysis based on mult-regression model for combing GWAS data</strong><br />
+Bio-X Institutes, SJTU, China<br />
+* Revised Meta-analysis methodology utilizing principles from multiple regression model and multivariate generalized least squares estimation<br />
+* Conducted genome-wide association study(GWAS) data analysis using the improved method</p>
+</div>
+<div id="internship-experience" class="section level3">
+<h3>Internship Experience</h3>
+<p><strong>PTA, IlluminStrategy, Illuminera, Shanghai, China</strong><br />
+* Conducted target data collection thorugh literature research and depth interviews of physicians<br />
+* Preformed data proceesing and analysiscontribute to the final report and presentation of each project</p>
+<p><strong>Intern, Life Science Dept., GE Healthcare, Shanghai, China</strong><br />
+* Familiarized with protein purification process; Practiced operating purification instrument (ÄKTA™ pure)<br />
+* Performed analysis on protein data extracted from the ÄKTA™ pure</p>
+</div>
+<div id="leadership-experience" class="section level3">
+<h3>Leadership Experience</h3>
+<p><strong>Principal Trombone</strong>, Columbia Univserivty Symphony Orchestra, Columbia University<br />
+<strong>Vice President</strong>, Work-study Dept., School Library, SJTU, China<br />
+<strong>Arts and Sports Director</strong>, School of Pharmacy, SJTU, China</p>
+</div>
+<div id="personal-skills" class="section level3">
+<h3>Personal Skills</h3>
+<p>Data analysis and programming software: <strong>SAS, R, MATLAB, SPSS and Python(in learing)</strong><br />
+Proficient in Microsoft package Languages: Mandarin (native) and English (fluent verbal and written)</p>
+</div>
 </div>
 
 
