--- a/index.html
+++ b/index.html
@@ -212,19 +212,18 @@ $(document).ready(function () {
 </div>
 
 
-<div id="i-have-a-webpage" class="section level3">
-<h3>I have a webpage!</h3>
-<p>And I can put all kinds of stuff on it!</p>
+<div id="this-is-he-jins-webiste" class="section level3">
+<h3>This is He Jin’s webiste!</h3>
+<p>Please have a look This <a href="about.html">about page</a> introduce something about me</p>
 </div>
 <div id="lets-have-a-link" class="section level3">
 <h3>Let’s have a link</h3>
-<p>My favorite website is <a href="http://www.baidu.com">Baidu</a></p>
-<p>I like the <a href="about.html">about page</a></p>
+<p>My favorite website is <a href="http://www.baidu.com">Baidu</a>, which is the <strong>Google</strong> in China</p>
 </div>
 <div id="heres-a-puppy" class="section level3">
 <h3>Here’s a puppy:</h3>
 <p><img src="IMG_7210.jpg" style="width:75%"></p>
-<p>I love this puppy.</p>
+<p>I love this puppy. It’s so cute!</p>
 </div>
 
 
