--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ $(document).ready(function () {
   </a>
 </li>
 <li>
-  <a href="http://github.com/&lt;YOUR_GH_NAME&gt;/">
+  <a href="http://github.com/Harksoul">
     <span class="fa fa-github fa-lg"></span>
      
   </a>
