--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ $(document).ready(function () {
 <div style="float:left; position : relative; top: 0px; width : 400px; height : 500px;">
 <p><img src="IMG_7539.jpg" width="80%" class="left"></p>
 </div>
-<div style="float:left; position : relative; top: 0px; width : 500px; height : 500px; text-align: justify; text-justify: inter-word;">
+<div style="position: relative; top: 0px; width : auto; height : 500px; text-align: justify; text-justify: inter-word;">
 <p><font size= 3px> <strong>He Jin</strong><br />
 <strong>Master of Science Candidate in Biostatistics</strong><br />
 <strong>Columbia University Mailman School of Public Health</strong> </font></p>
