--- a/index.html
+++ b/index.html
@@ -240,16 +240,18 @@ $(document).ready(function () {
 
 
 <body background="./back.jpg">
+<div style="width:900px;">
 <div style="float:left; position : relative; top: 0px; width : 400px; height : 500px;">
 <p><img src="IMG_7539.jpg" width="80%" class="left"></p>
 </div>
-<div style="position: relative; top: 0px; width : auto; height : 500px; text-align: justify; text-justify: inter-word;">
+<div style="position: relative; top: 0px; width : auto; height : 500px; right: 20px; text-align: justify; text-justify: inter-word;">
 <p><font size= 3px> <strong>He Jin</strong><br />
 <strong>Master of Science Candidate in Biostatistics</strong><br />
 <strong>Columbia University Mailman School of Public Health</strong> </font></p>
 <p>As a result-driven, analytical, and process-focused Statistical Analysis &amp; Data Science Entry-level Professional, I offer experience in data manipulation, biostatistical methods, statistical analysis &amp; machine learning, market research, project management &amp; coordination, and delivering reports. I exhibit a proven track record in utilizing cutting-edge data analysis techniques, while implementing quantitative research and data visualization best practices through R, SAS and Python. I also exemplify excellent ability to compile and organize healthcare database through SQL while analyzing data to assist in delivering optimal healthcare management and decision making.</p>
 <p>Now I am actvitly looking for full time opportunities in biostatsitics, health related data science and data analysis. Please feel free to contact me if you think there is a postion that might be a good fit for me.</p>
 <p>This <a href="about.html">resume</a> page introduce something more about me, if you prefer a pdf veriosn resume, please click <a href="resume.pdf">here</a>, if you are looking for my most updated CV, please <a href="mailto:%3Chj2479@columbia.edu%3E">email</a> me directly </font></p>
+</div>
 </div>
 
 
