Update type error

--- a/about.html
+++ b/about.html
@@ -341,7 +341,7 @@ div.tocify {
 <p><strong>Master of Science, Columbia University, Mailman School of Public Health, New York, NY, 2019</strong><br />
 Major: Biostatisitcs (Theory &amp; Methods track); GPA: 3.75/4.0</p>
 <p><strong>Bachelor of Science, Shanghai Jiao Tong University (SJTU), Shanghai, China, 2017</strong><br />
-Major: Pharmacy, Minor: Musicology; GPA: 3.52/4.0</p>
+Major: Pharmacy, Minor: Musicology; GPA: 3.5/4.0</p>
 </div>
 <div id="professional-experience" class="section level2">
 <h2>Professional Experience</h2>
@@ -350,8 +350,9 @@ Major: Pharmacy, Minor: Musicology; GPA: 3.52/4.0</p>
 <li>Utilized descriptive statistics and statistical models in analyzing survey and CMS (Medicaid &amp; Medicare) data using SAS &amp; STATA</li>
 <li>Streamlined and improved performance and accuracy of questionnaire using factor analysis(EFA, CFA) and IRT (Item Response Theory) model</li>
 <li>Summarized exhibits, tables and figures in Excel using Pivot Tables and prepared the final paper for review</li>
-<li>Recognized for formatting 20+ research papers in alignment with APA, AMA and Chicago Manual of Style guidelines</li>
-<li>Served as a main contributor in drafting protocols for data collection and data processing methods and collaborated with other researchers on data management, statistical analysis plan (SAP) and manuscript preparation</li>
+<li>Served as a main contributor in drafting protocols for data collection and data processing methods and collaborated with other researchers on data management, statistical analysis plan (SAP) and manuscript preparation<br />
+</li>
+<li>Recognized for formatting 40+ research papers in alignment with APA, AMA and Chicago Manual of Style guidelines</li>
 </ul>
 <p><strong>Modeling Analyst Intern, BroadRiver Asset Management, L.P., New York, NY</strong></p>
 <ul>
@@ -360,7 +361,9 @@ Major: Pharmacy, Minor: Musicology; GPA: 3.52/4.0</p>
 <li>Managed and optimized large-scale life settlement dataset to track client outcomes and build portfolio efficiently</li>
 <li>Manipulated and analyzed third-party underwriting data to facilitate strategic decision and save cost for the firm<br />
 </li>
-<li>Skillfully performed survival modeling to identify differences between clients’ self-reported and actual health status</li>
+<li>Skillfully performed survival modeling to identify differences between clients’ self-reported and actual health status<br />
+</li>
+<li>Precisely completed comprehensive financial modeling to generate business insights using V-Lookup in Excel</li>
 </ul>
 <p><strong>Assistant Analyst, IlluminHealth, The Illuminera Group, Shanghai, China</strong></p>
 <ul>
