--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>He Jin, M.S</title>
+<title>He Jin, M.S.</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -234,7 +234,7 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">He Jin, M.S</h1>
+<h1 class="title toc-ignore">He Jin, M.S.</h1>
 
 </div>
 
@@ -249,8 +249,8 @@ $(document).ready(function () {
 <strong>Master of Science Candidate in Biostatistics</strong><br />
 <strong>Columbia University Mailman School of Public Health</strong> </font></p>
 <p>As a result-driven, analytical, and process-focused Statistical Analysis &amp; Data Science Entry-level Professional, I offer experience in data manipulation, biostatistical methods, statistical analysis &amp; machine learning, market research, project management &amp; coordination, and delivering reports. I exhibit a proven track record in utilizing cutting-edge data analysis techniques, while implementing quantitative research and data visualization best practices through R, SAS and Python. I also exemplify excellent ability to compile and organize healthcare database through SQL while analyzing data to assist in delivering optimal healthcare management and decision making.</p>
-<p>Now I am actvitly looking for full time opportunities in biostatsitics, health related data science and data analysis. Please feel free to contact me if you think there is a postion that might be a good fit for me.</p>
-<p>This <a href="about.html">resume</a> page introduce something more about me, if you prefer a pdf veriosn resume, please click <a href="resume.pdf">here</a>, if you are looking for my most updated CV, please <a href="mailto:%3Chj2479@columbia.edu%3E">email</a> me directly </font></p>
+<p>Now I am actively looking for full-time opportunities in biostatistics &amp; statistics, health-related data science &amp; data analysis, and Health Economics and Outcome Research (HEOR) Analysis. Please feel free to contact me if you think there is a position that might be a good fit for me.</p>
+<p>This <a href="about.html">resume</a> page introduce something more about me, if you prefer a pdf version resume, please click <a href="resume.pdf">here</a>, if you are looking for my most updated CV, please <a href="mailto:%3Chj2479@columbia.edu%3E">email</a> me directly </font></p>
 </div>
 </div>
 
